fix dark mode colors

--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -23,10 +23,10 @@
 }
 
 .dark {
-  --background-rgb: 10, 26, 35;
+  --background-rgb: 0, 0, 0;
   --foreground-rgb: 255, 255, 255;
-  --light: #000000;
-  --layers: #092b37;
+  --light: #141414;
+  --layers: #132a36;
   --highlight-rgb: 255, 105, 0;
   --filter-inverted: none;
 }
